--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+}
+#root {
+  height: 100%;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  position: relative;
+}
+.popup {
+  position: absolute;
+  top: 48px;
+  right: 0;
+  background-color: white;
+  border: 2px solid rgb(168, 209, 236);
+  padding: 25px;
+  border-radius: 8px;
+}
+
+.btn__popup {
+  padding: 15px 40px;
+  border-radius: 8px;
+  font-size: 16px;
+  border: none;
+  background-color: rgb(209, 245, 245);
+}
+
+.calendar {
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 1fr);
+  gap: 15px;
+}
+.month {
+  text-align: center;
+  background-color: rgb(209, 245, 245);
+  padding: 8px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+.days {
+  border: 1px solid rgb(209, 245, 245);
+  border-radius: 50px;
+  padding: 15px;
+  text-align: center;
+
+}
+.dayActive {
+  background-color: rgb(209, 245, 245);
+}
+.container__btn {
+  border: 1px solid rgb(209, 245, 245);;
+  background-color: white;
+  padding: 15px;
+  border-radius: 50px;
 }
